<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">도와줘!</string>

    <!-- 액티비티 라벨  -->
    <string name="act_join_form">정보등록</string>
    <string name="act_mod_form">정보수정</string>
    <string name="act_detail">내 정보</string>

    <!-- 폼 구성요소에 사용되는 라벨  -->
    <string name="name">성명</string>
    <string name="sex">성별</string>
    <string name="birthday">생일</string>
    <string name="bloodtype">혈액형</string>
    <string-array name="bloodtype_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string name="receive">임신여부</string>

    <string name="precaution">주의사항</string>
    <string name="allergy">알레르기 및 부작용</string>
    <string name="protector">보호자 연락처</string>

    <string name="hint">없을 경우 빈 칸</string>

    <string name="emergency_button">긴급신고</string>

    <string name="setting">현재 버전 : 1.0\n문의 : xxxsh94@naver.com</string>
    <string name="appwidget_text">도와줘</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
